--- a/src/Components/arcinfo.css
+++ b/src/Components/arcinfo.css
@@ -13,7 +13,7 @@
     color: #fff;
     text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #0073e6, 0 0 20px #0073e6,
         0 0 25px #0073e6, 0 0 30px #0073e6, 0 0 35px #0073e6;
-    font-size: 30px;
+    font-size: 2rem;
     font-weight: lighter;
 }
 
@@ -32,6 +32,7 @@
     cursor: pointer;
     transition: background-color 0.3s;
     display: flex;
+    font-size: 1rem;
 }
 
 .episode-container button:hover {
