--- a/src/Components/header.css
+++ b/src/Components/header.css
@@ -9,9 +9,13 @@
     color: #fff;
     text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #0073e6, 0 0 20px #0073e6,
         0 0 25px #0073e6, 0 0 30px #0073e6, 0 0 35px #0073e6;
-    font-size: 30px;
+    font-size: 1.5rem;
     background-color: black;
     font-weight: lighter;
     border-radius: 5px;
-    padding: 0 10px;
+    padding: 5px 20px;
+}
+
+.backToGallery:hover {
+    filter: brightness(75%);
 }
