--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 body {
     background-image: url(./assets/Background/dark1.jpg);
     background-position: center;
