--- a/client/src/Components/videoplayer.css
+++ b/client/src/Components/videoplayer.css
@@ -12,3 +12,16 @@ video::cue {
     margin-top: -8px;
     padding-left: 2px;
 }
+
+.volume-display {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+    font-size: 24px;
+    z-index: 10;
+}
