--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-image: url(./assets/Background/dark1.jpg);
+    background-image: url(/Assets/Background/dark1.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
