--- a/client/src/Components/gallery.css
+++ b/client/src/Components/gallery.css
@@ -17,6 +17,8 @@ img {
 }
 
 .image {
+    width: 100%;
+    height: auto;
     flex: 1;
     aspect-ratio: 1 / 1.5;
     cursor: pointer;
@@ -30,6 +32,7 @@ img {
 .image img {
     display: block;
     width: 100%;
+    height: 100%;
     aspect-ratio: 1 / 1.5;
     object-fit: cover;
     border-radius: 4px;
