--- a/client/src/Components/videoplayer.css
+++ b/client/src/Components/videoplayer.css
@@ -7,10 +7,10 @@ video::cue {
     display: flex;
     justify-content: center;
     align-items: center;
-    max-width: 1270px;
+    max-width: 1280px;
     max-height: 720px;
-    margin-top: -8px;
-    padding-left: 2px;
+    margin-top: -2px;
+    margin-left: 3px;
 }
 
 .volume-display {
@@ -24,4 +24,50 @@ video::cue {
     border-radius: 5px;
     font-size: 24px;
     z-index: 10;
+}
+
+/* Media Query for Mobile Devices */
+@media (max-width: 844px) and (orientation: portrait) {
+    .player-container {
+        margin-top: 22px;
+        margin-left: 0;
+        margin-right: 0;
+        max-width: 100vw;
+        max-height: 100vh;
+    }
+
+    .volume-display {
+        font-size: 10px;
+    }
+}
+
+@media (max-width: 844px) and (orientation: landscape) {
+    .player-container {
+        margin: 25px 0 0 0;
+        padding: 0;
+        max-width: 66vw;
+        max-height: 66vh;
+    }
+}
+
+/* Media Query for iPad */
+@media (width: 1024px) and (orientation: portrait) {
+    .player-container {
+        margin-top: 60px;
+        margin-left: 0;
+        margin-right: 0;
+        max-width: 100vw;
+        max-height: 100vh;
+    }
+}
+
+/* Media Query for iPad */
+@media (width: 1366px) and (orientation: landscape) {
+    .player-container {
+        margin-top: 33px;
+        margin-left: 0;
+        margin-right: 0;
+        max-width: 88vw;
+        max-height: 88vh;
+    }
 }
