--- a/client/src/Components/gallery.css
+++ b/client/src/Components/gallery.css
@@ -1,8 +1,8 @@
 .gallery-container {
     width: 66vw;
     height: 66vh;
+    margin: 0 2px 0;
     margin: 0 auto;
-    padding-left: 5px;
 }
 
 img {
