--- a/client/src/Components/videoplayer.css
+++ b/client/src/Components/videoplayer.css
@@ -1,16 +1,15 @@
 video::cue {
     background-color: rgba(0, 0, 0, 0.8);
     color: #ffc800;
+    font-size: 2rem;
 }
 
 .player-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    max-width: 1280px;
-    max-height: 720px;
-    margin-top: -2px;
-    margin-left: 3px;
+    width: 100%;
+    height: 100%;
 }
 
 .volume-display {
