--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,8 +10,9 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    margin: 0;
-    padding: 0;
     display: flex;
     justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
 }
