--- a/client/src/Components/title.css
+++ b/client/src/Components/title.css
@@ -9,7 +9,7 @@
     color: #fff;
     text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #0073e6, 0 0 20px #0073e6,
         0 0 25px #0073e6, 0 0 30px #0073e6, 0 0 35px #0073e6;
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     background-color: black;
     font-weight: lighter;
     border-radius: 5px;
@@ -18,5 +18,6 @@
 }
 
 .backToGallery:hover {
-    filter: brightness(75%);
+    color: black;
+    background-color: white;
 }
