--- a/client/src/Components/frame.css
+++ b/client/src/Components/frame.css
@@ -24,3 +24,10 @@
     height: 100%;
     overflow: hidden;
 }
+
+@media (max-width: 1024px) {
+    .frame-container {
+        width: 100%;
+        height: 100%;
+    }
+}
