--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,3 +16,10 @@ body {
     height: 100%;
     width: 100%;
 }
+
+#root {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
